--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html>
 <head>
   <title>Swagger UI</title>
-  <link rel="icon" type="image/png" href="/static/swagger/images/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/static/swagger/images/favicon-16x16.png" sizes="16x16" />
-  <link href='/static/swagger/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='/static/swagger/css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='/static/swagger/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='/static/swagger/css/reset.css' media='print' rel='stylesheet' type='text/css'/>
-  <link href='/static/swagger/css/print.css' media='print' rel='stylesheet' type='text/css'/>
-  <script src='/static/swagger/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
-  <script src='/static/swagger/lib/jquery.slideto.min.js' type='text/javascript'></script>
-  <script src='/static/swagger/lib/jquery.wiggle.min.js' type='text/javascript'></script>
-  <script src='/static/swagger/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-  <script src='/static/swagger/lib/handlebars-2.0.0.js' type='text/javascript'></script>
-  <script src='/static/swagger/lib/underscore-min.js' type='text/javascript'></script>
-  <script src='/static/swagger/lib/backbone-min.js' type='text/javascript'></script>
-  <script src='/static/swagger/swagger-ui.js' type='text/javascript'></script>
-  <script src='/static/swagger/lib/highlight.7.3.pack.js' type='text/javascript'></script>
-  <script src='/static/swagger/lib/marked.js' type='text/javascript'></script>
+  <link rel="icon" type="image/png" href="/doc/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/doc/images/favicon-16x16.png" sizes="16x16" />
+  <link href='/doc/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='/doc/css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='/doc/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='/doc/css/reset.css' media='print' rel='stylesheet' type='text/css'/>
+  <link href='/doc/css/print.css' media='print' rel='stylesheet' type='text/css'/>
+  <script src='/doc/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+  <script src='/doc/lib/jquery.slideto.min.js' type='text/javascript'></script>
+  <script src='/doc/lib/jquery.wiggle.min.js' type='text/javascript'></script>
+  <script src='/doc/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+  <script src='/doc/lib/handlebars-2.0.0.js' type='text/javascript'></script>
+  <script src='/doc/lib/underscore-min.js' type='text/javascript'></script>
+  <script src='/doc/lib/backbone-min.js' type='text/javascript'></script>
+  <script src='/doc/swagger-ui.js' type='text/javascript'></script>
+  <script src='/doc/lib/highlight.7.3.pack.js' type='text/javascript'></script>
+  <script src='/doc/lib/marked.js' type='text/javascript'></script>
 
   <script type="text/javascript">
     $(function () {
-      var url = "swagger.json";
+      var url = "/swagger.json";
       window.swaggerUi = new SwaggerUi({
         url: url,
         validatorUrl: null,
